# dcss-score-serve

./: Cargo.toml  Rocket.toml
src/: main.rs  models.rs
static/: index.css
templates/: deaths.html.tera  frequency.html.tera  index.html.hbs  index.html.tera  species.html.tera  user.html.tera
