[package]
name = "crawl_score_serve"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
diesel = { version = "0.16.0", features = ["sqlite"] }
diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
dotenv = "0.10.1"
serde = "1.0.15"
serde_derive = "1.0.15"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"

[dependencies.rocket_contrib]
version = "0.3.3"
default-features = false
features = ["handlebars_templates", "json"]

