[package]
name = "crawl_score_serve"
version = "0.1.0"
authors = ["Richard McCormack <brick@brick.codes>"]

[dependencies]
crawl_model = { git = "https://github.com/DenialAdams/crawl_model" }
rocket = "0.3.3"
rocket_codegen = "0.3.3"
diesel = { version = "0.99", features = ["sqlite", "large-tables"] }
dotenv = "0.10.1"
serde = "1.0.15"
serde_derive = "1.0.15"
r2d2 = "0.8.1"
r2d2-diesel = "0.99.0"

[dependencies.rocket_contrib]
version = "0.3.3"
default-features = false
features = ["tera_templates", "json"]

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel" }
